--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,38 @@
 version: "3.8"
 
 services:
+  database:
+    container_name: "db_queue-manager-cnt"
+    image: "mysql:8.0"
+    ports: 
+      - "3306:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+    volumes: 
+      - "mysql_data:/var/lib/mysql"
+
   backend:
     container_name: "back-queue-manager-cnt"
     build:
-      context: ./backend
-      dockerfile: Dockerfile
+      context: "./backend"
+      dockerfile: "Dockerfile"
     image: "back-queue-manager-img:1.0.0"
     ports: 
       - "4001:4000"
+    depends_on:
+      - "database"
 
   frontend:
     container_name: "fron-queue-manager-cnt"
     build:
-      context: ./frontend
-      dockerfile: Dockerfile
+      context: "./frontend"
+      dockerfile: "Dockerfile"
     image: "front-queue-manager-img:1.0.0"
     ports: 
       - "3001:3000"
-    
+    depends_on:
+      - "database"
+
+volumes:
+  mysql_data:
