--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
       - "4001:4000"
     depends_on:
       - "database"
+    environment:
+      DATABASE_URL: ${DATABASE_URL}
 
   frontend:
     container_name: "fron-queue-manager-cnt"
